# jaybeams

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  LICENSE  Makefile.am  NOTICE  README.md  README_8md.html  README_8md_source.html  acceptor_8cpp.html  acceptor_8cpp_source.html  acceptor_8hpp.html  acceptor_8hpp_source.html  add__order__message_8cpp.html  add__order__message_8cpp_source.html  add__order__message_8hpp.html  add__order__message_8hpp_source.html  add__order__mpid__message_8cpp.html  add__order__mpid__message_8cpp_source.html  add__order__mpid__message_8hpp.html  add__order__mpid__message_8hpp_source.html  aligned__multi__array_8hpp.html  aligned__multi__array_8hpp_source.html  aligned__vector_8hpp.html  aligned__vector_8hpp_source.html  allocator_8hpp.html  allocator_8hpp_source.html  annotated.html  array__based__order__book_8cpp.html  array__based__order__book_8cpp_source.html  array__based__order__book_8hpp.html  array__based__order__book_8hpp_source.html  array__traits_8hpp.html  array__traits_8hpp_source.html  as__hhmmss_8cpp.html  as__hhmmss_8cpp_source.html  (+1445 more)
ci/: Dockerfile.fedora  Dockerfile.ubuntu  before_install.sh  before_script.sh  build-in-docker.sh  build-linux.sh  check-style.sh  coverage-lcov.sh  coverage.sh  coverity-install.sh  coverity-model.cpp  coverity-upload.sh  create-analysis-image.sh  create-build-image.sh  create-runtime-image.sh  gendocs.sh  install.sh  upload-build-image.sh  upload-coverage.sh  upload-docs.sh
cmake/: CodeCoverage.cmake  FindCLFFT.cmake  FindFFTW.cmake  FindSanitizers.cmake
doc/: Doxyfile  binning_strategy_concept.dox  configuration_options.dox  mainpage.dox  message_handler_concept.dox  namespaces.dox  reducer_concept.dox  setup.dox  setup.md  style_guide.md
docker/analysis/: Dockerfile
docker/dev/: README.md  buildall.sh  pushall.sh  runvariant.sh  stage-variant-helper.sh  stage-variant.sh  test-image.sh
docker/runtime/: buildall.sh
examples/: configuration.cpp  fftw_correlation_no_wrappers.cpp
jb/: as_hhmmss.cpp  as_hhmmss.hpp  assert_throw.cpp  assert_throw.hpp  bm_clocks.cpp  book_cache_aware_stats.cpp  book_cache_aware_stats.hpp  book_depth_statistics.cpp  book_depth_statistics.hpp  complex_traits.hpp  config_attribute.hpp  config_files_location.cpp  config_files_location.hpp  config_object.cpp  config_object.hpp  config_recurse.hpp  convert_cpu_set.hpp  convert_severity_level.hpp  cpu_set.cpp  cpu_set.hpp  event_rate_estimator.hpp  event_rate_histogram.hpp  explicit_cuts_binning.hpp  feed_error.hpp  fileio.cpp  fileio.hpp  filetype.cpp  filetype.hpp  fixed_string.hpp  histogram.hpp  histogram_binning_linear_interpolation.hpp  histogram_summary.cpp  histogram_summary.hpp  integer_range_binning.hpp  launch_thread.hpp  log.cpp  log.hpp  merge_yaml.cpp  merge_yaml.hpp  offline_feed_statistics.cpp  (+44 more)
jb/clfft/: CMakeLists.txt  bm_single_fft.cpp  clfft_error_ut.cpp  clfft_plan_ut.cpp  complex_traits.hpp  error.cpp  error.hpp  init.cpp  init.hpp  plan.cpp  plan.hpp  ut_error.cpp  ut_plan.cpp
jb/detail/: array_traits.hpp  os_error.cpp  os_error.hpp  reconfigure_thread.cpp  reconfigure_thread.hpp  thread_setup_wrapper.hpp
jb/ehs/: acceptor.cpp  acceptor.hpp  base_types.hpp  connection.cpp  connection.hpp  request_dispatcher.cpp  request_dispatcher.hpp  ut_acceptor.cpp  ut_request_dispatcher.cpp
jb/etcd/: active_completion_queue.cpp  active_completion_queue.hpp  active_completion_queue_ut.cpp  async_rdwr_stream.hpp  client_factory.cpp  client_factory.hpp  completion_queue.cpp  session.cpp  (+30 more)
jb/fftw/: CMakeLists.txt  aligned_multi_array.hpp  aligned_vector.hpp  alignment_traits.hpp  allocator.hpp  bm_time_delay_estimator.cpp  bm_time_delay_estimator_alignment.sh  bm_time_delay_estimator_many.cpp  cast.hpp  plan.cpp  plan.hpp  tde_result.hpp  time_delay_estimator.hpp  time_delay_estimator_many.hpp  traits.hpp  ut_aligned_multi_array.cpp  ut_allocator.cpp  ut_cast_multi_array.cpp  ut_cast_vector.cpp  ut_plan.cpp  ut_plan_many.cpp  ut_tde_result.cpp  ut_time_delay_estimator.cpp  ut_time_delay_estimator_many.cpp  ut_traits.cpp
jb/opencl/: CMakeLists.txt  bm_copy_buffer.cpp  bm_generic_reduce.cpp  bm_generic_reduce_driver.sh  bm_generic_reduce_report.Rmd  bm_launch_kernel.cpp  build_simple_kernel.cpp  build_simple_kernel.hpp  config.cpp  config.hpp  copy_to_host_async.hpp  device_selector.cpp  device_selector.hpp  generic_reduce.hpp  generic_reduce_program.cpp.in  generic_reduce_program.hpp  microbenchmark_config.cpp  microbenchmark_config.hpp  platform.hpp  show_device.cpp  ut_build_simple_kernel.cpp  ut_config.cpp  ut_copy_to_host_async.cpp  ut_device_selector.cpp  ut_generic_reduce.cpp
jb/tde/: CMakeLists.txt  bm_reduce_argmax_real.cpp  conjugate_and_multiply.hpp  conjugate_and_multiply_kernel.cl  conjugate_and_multiply_kernel.cpp.in  conjugate_and_multiply_kernel.hpp  generic_reduce.hpp  generic_reduce_program.cl  ut_conjugate_and_multiply.cpp  ut_generic_reduce.cpp  ut_reduce_argmax_real.cpp
m4/: ax_beast.m4  ax_boost_compute.m4  ax_clfft.m4  ax_cxx_compile_stdcxx.m4.patch  ax_fftw3.m4  ax_gmock_source.m4  ax_opencl.m4
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_68.js  all_69.js  all_6a.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_79.js  all_8.js  all_9.js  all_b.js  (+221 more)
tools/: README.md  benchmark_common.sh  benchmark_fftw_time_delay_estimator.sh  benchmark_opencl_launch_kernel.R  benchmark_opencl_launch_kernel.sh  benchmark_order_books.sh  benchmark_reduce_argmax_real.R  benchmark_reduce_argmax_real.sh  benchmark_setup.sh  benchmark_teardown.sh  gen_compile_info.sh  itch5arrayinside.cpp  itch5bookdepth.cpp  itch5cacheaware.cpp  itch5eventdepth.cpp  itch5inside.cpp  itch5moldreplay.cpp  itch5stats.cpp  itch5trades.cpp  mold2inside.cpp  moldheartbeat.cpp
valgrind/: README.md
(+295 files in other folders)
